# kaggle_nlp_getting_started

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
conf/: config.yaml
conf/embeddings/: count_vectorizer.yaml  glove1.yaml
conf/hyperparameter_tuning/: v1.yaml
conf/model_params/: base.yaml  v1.yaml  v2.yaml
config_history/: aboriginal-peccary.yaml  cyan-alpaca.yaml  magnetic-jacamar.yaml  outgoing-corgi.yaml  spicy-crab.yaml  yellow-earthworm.yaml
misc/: experiment.drawio  pipeline.drawio
notebooks/: 2025_02_17_initial_prototyping.ipynb  2025_02_18_huggingface_prototype.ipynb  2025_02_20_prototype.ipynb
scripts/: run_experiment.sh  start_services.sh  stop_services.sh
setup/: environment.yml
tests/: test_polars_train_val_test_split.py
trav_nlp/: misc.py  pipeline.py  pipeline2.py  submit_pipeline_run.py
